--- a/index.css
+++ b/index.css
@@ -31,11 +31,13 @@ h2, p {
 }
 
 .players {
+    margin-top: 10px; /*   */
     align-items: center;
     justify-content: center;
 }
 
 .player {
+    margin: 5px; /*   */
     display: flex;
     flex-direction: row;
     align-items: center;
